src/test/ui/consts/min_const_fn/min_const_fn_dyn.stderr
error[E0658]: trait bounds other than `Sized` on const fn parameters are unstable
  --> $DIR/min_const_fn_dyn.rs:9:5
   |
LL | const fn no_inner_dyn_trait2(x: Hide) {
   | ------------------------------------- function declared as const here
LL |     x.0.field;
   |     ^^^^^^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn_trait_bound)]` to the crate attributes to enable

error[E0658]: trait bounds other than `Sized` on const fn parameters are unstable
  --> $DIR/min_const_fn_dyn.rs:12:66
   |
LL | const fn no_inner_dyn_trait_ret() -> Hide { Hide(HasDyn { field: &0 }) }
   | -----------------------------------------                        ^^
   | |
   | function declared as const here
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn_trait_bound)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
